# policy_repo

./: .gitignore  app.py  models.py  pyproject.toml  semantic_model.py  setup_db.py
db/: database.py  policy_repository.db
instance/: policy_repository.db
migrations/versions/: 5faa7bb946fb_alter_column_content_on_policy_.py  7c22ee226375_add_number_date_column_on_policy_.py
templates/: base.html  contextual_search.html  index.html  policies.html  policy_view.html  search_result.html  upload.html
utils/: drive_uploader.py  file_reader.py  query_search.py  search_engine copy.py  search_engine.py
